# rust-tutorial-actix-diesel-sqlite

./: .env  .gitignore  Cargo.toml  README.md  app.db
src/: handlers.rs  main.rs  models.rs  routes.rs  schema.rs
templates/: index.html
