[package]
name = "actix-web-diesel-sqlite"
version = "0.1.0"
authors = ["kilroyjones"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.1.1"
diesel = { version = "1.4.5", features = ["sqlite", "r2d2"] } 
sqlx = { version="0.3.5", features = ["sqlite"] }
dotenv = "0.15.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
chrono = "0.4.15"
anyhow = "1.0"
